--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,29 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.page {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  right: 0;
+}
+
+.page--centered {
+  display: flex;
+  justify-content: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(170, 170, 170);
+  text-decoration: none;
 }
